cambios en el readme y html

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <script src="main.js"></script>
+    <h1>hola amiguita kalu! :3</h1>
   </body>
+  <script src="main.js"></script>
 </html>
