--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,22 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>hola amiguita kalu! :3</h1>
+    <header id="LogoLAB">
+      <img src="http://v.fastcdn.co/t/cf943cfe/5519e61e/1527645394-27418802-257x33-Laboratoria-Logo-RGB.png" alt="20"><br>
+      Talento que transforma
+    </header>
+    <h1>hola, somos la doble K</h1>
+    <div id="myContent">
+      <div>
+      <h2>Un título XYZ</h2>
+      <p>Tenemos contenido</p>
+      <span>¿por qué aquí va la fecha?</span>
+      </div>
+    </div>
+  <div id="carga">Cargando...</div>  
+
+  <button id="botonJSON">Cargar JSON</button>
+    
   </body>
   <script src="main.js"></script>
 </html>
