--- a/src/index.html
+++ b/src/index.html
@@ -10,18 +10,13 @@
       <img src="http://v.fastcdn.co/t/cf943cfe/5519e61e/1527645394-27418802-257x33-Laboratoria-Logo-RGB.png" alt="20"><br>
       Talento que transforma
     </header>
-    <h1>hola, somos la doble K</h1>
+    <h1>Datos laboratoria</h1>
     <div id="myContent">
-      <div>
-      <h2>Un título XYZ</h2>
-      <p>Tenemos contenido</p>
-      <span>¿por qué aquí va la fecha?</span>
-      </div>
     </div>
-  <div id="carga">Cargando...</div>  
-
-  <button id="botonJSON">Cargar JSON</button>
-    
+  <button id="botonJSONuser" onclick="mostrar1">User JSON</button>
+  <button id="botonJSONprogress" onclick="mostrar">Progress JSON</button> 
   </body>
   <script src="main.js"></script>
+  <script src="data.js"></script>
+
 </html>
