ya podemos llamar a la data

--- a/src/index.html
+++ b/src/index.html
@@ -13,15 +13,16 @@
     <h1>hola, somos la doble K</h1>
     <div id="myContent">
       <div>
-      <h2>Un título XYZ</h2>
+      <h2>base de datos</h2>
       <p>Tenemos contenido</p>
       <span>¿por qué aquí va la fecha?</span>
       </div>
     </div>
-  <div id="carga">Cargando...</div>  
+  <!--div id="carga">Cargando...</div-->  
 
   <button id="botonJSON">Cargar JSON</button>
     
   </body>
   <script src="main.js"></script>
+  <script src="data.js"></script>
 </html>
