--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
   <script src="data.js"></script>
 
 
-
+<!--Acá el JavaScript-->
   <script>
     let cboUsers = document.getElementById('cboUsers');
     cboUsers.addEventListener("change", function () {
