--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,52 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <meta charset="utf-8">
-  <title>Laboratoria Dashboard</title>
-  <link rel="stylesheet" href="style.css" /> 
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Dashboard laboratoria</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
 </head>
-<body>
-  <header id="LogoLAB">
-    <img src="http://v.fastcdn.co/t/cf943cfe/5519e61e/1527645394-27418802-257x33-Laboratoria-Logo-RGB.png" alt="20">
-    <br> Talento que transforma
+<body onload="myOnLoad()">
+  <header>
+    <img src="http://v.fastcdn.co/t/cf943cfe/5519e61e/1527645394-27418802-257x33-Laboratoria-Logo-RGB.png" class=h eader-image
+      alt="logo">
   </header>
   <main>
-      <center>
-    <div id="cohort">Selecciona cohort</div>
-    <br>
-    <select id="cboCohorts"> </select>
-    <div id="cohort">Selecciona Alumna</div>
-    <select id="cboUsers"> </select>
-    <table class="table table-bordered">
-      <thead class="thead-dark">
-        <tr>
-          <th scope="col">Unidad</th>
-          <th scope="col">Progreso</th>
-      </thead>
-      <tbody id="progressTable">
-      </tbody>
-    </table>
+    <aside class=menu-lateral>
+      <div id=name-user>
+        <img id=avatar src="https://image.ibb.co/htQKLT/ale.png" alt="avatar" /> Alejandra Ramirez
+      </div>
+      <div class="vertical-menu">
+        <a href="#">Resumen general</a>
+        <a href="#">Detalle alumnas</a>
+      </div>
+      <button>Salir</button>
+    </aside>
+    <section>
+      <div class=elegir-data>
+        <select name="cboSede"><option>selecciona sede </option></select>
+        <p>Cohort:</p>
+        <select id="cboCohorts" onchange="cursos()"></select>
+        <p>Alumnas:</p>
+        <select id="cboUsers"></select>
+      </div>
+      <div class=output>
+      <table class="table table-bordered">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col"> Unidad</th>
+            <th scope="col">Partes Completadas</th>
+        </thead>
+        <tbody id="progressTable">
+        </tbody>
+      </table>
+    </div>
+    </section>
+    
   </main>
   <script src="main.js"></script>
-  <script src="data.js"></script>
+  <script src="data.js"></script> 
+  <footer>Trabaja con nosotros ...Trabajamos para ser la principal fuente de talento tech femenino de América Latina para el mundo.</footer>
 </body>
 </html>
